Update to use the new Burrow V3 apis

--- a/conf.d/burrow.yaml
+++ b/conf.d/burrow.yaml
@@ -1,6 +1,6 @@
 init_config:
 instances:
-  - burrow_uri: http://burrow:8000
+  - burrow_uri: http://192.168.77.191:8000
     clusters:
       - local
     tags:
